# simple_mcp_test

./: .gitignore  README.md  pyproject.toml  render.yaml
mcp_test/: __init__.py  database.py  server.py
